# r3ap3rdemocrate

./: Cargo.toml  README.md
.github/workflows/: build.yaml  publish.yaml  test.yml
src/: lib.rs
src/api/: api.rs  mod.rs
src/cli/: cli.rs  mod.rs
tests/: api_test.rs
